<resources>
    <string name="app_name">EduHub</string>
    <string name="welcome">Welcome to CSTU Educational Portal</string>
    <string name="admin">Admin Panel</string>
    <string name="teacher">Faculty Member</string>
    <string name="student">Student</string>
    <string name="log">LogIn</string>
    <string name="pass">Password</string>
    <string name="signup">Do not have an account? Sign Up</string>
    <string name="signin">Already have an account? Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>