<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#E2E1D1"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cstu_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="40dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:text="@string/welcome"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/admin"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnTeacher"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/teacher"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnStudent"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/student"
            />


    </LinearLayout>

  </LinearLayout>