<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/blue"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:hint="Email"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:hint="@string/pass"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/log"/>

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#2962FF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</LinearLayout>
